[package]
name = "ripped"
version = "0.1.0"
edition = "2021"

[dependencies]
rfd = "0.8"
glob = "0.3"
rayon = "1.5"
anyhow = "1.0"
fehler = "1.0"
eframe = "0.16"
peppi = "1.0.0-alpha.6"
rusqlite = { version = "0.27", features = ["bundled"] }
color-backtrace = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }

[features]
features = []
persistence = ["eframe/persistence", "serde"]